bk_ida/gccida/g1/gen_rtx_REG
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_rtx_REG/src/emit-rtl.c:851:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_rtx_REG( machine_mode mode, int regno) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_rtx_REG/src/emit-rtl.c:890:7: error: use of undeclared identifier 'MEMORY'
if ( !MEMORY[0x10096D8DF] ) 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_rtx_REG/src/obj/emit-rtl.o] Error 1
